[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/fontes/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cenas/personagem/Personagem.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas/cenarios/interface/PainelLuta.gd" type="Script" id=3]
[ext_resource path="res://assets/monstros/lobisomem.png" type="Texture" id=4]
[ext_resource path="res://assets/dado.png" type="Texture" id=5]
[ext_resource path="res://assets/espadas_batalha.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.145098, 0.137255, 0.137255, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.72549, 0.576471, 0.392157, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 2

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.72549, 0.576471, 0.392157, 1 )
thickness = 2

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.145098, 0.137255, 0.137255, 1 )

[sub_resource type="DynamicFont" id=8]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=12]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Espadas:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 400 ), Vector2( 320, 210 ), Vector2( 320, 210 ), Vector2( 320, 120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Espadas:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Espadas:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "terminou_animacao_espadas"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Espadas:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Fugiu"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelPersonagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -230, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelMonstro:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 410, 10 ), Vector2( 650, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Acoes:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 10 ), Vector2( 240, -170 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "terminou_animacao_paineis_fugir"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Personagem:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 265, 294 ), Vector2( -230, 294 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Monstro:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 373, 294 ), Vector2( 880, 294 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Monstro:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Personagem:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Fugir:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelPersonagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 10 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Personagem:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 294 ), Vector2( 265, 294 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Personagem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelMonstro:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 650, 10 ), Vector2( 410, 10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Monstro:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Monstro:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 880, 294 ), Vector2( 373, 294 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Acoes:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, -170 ), Vector2( 240, 10 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Personagem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0.835294 ), Color( 1, 0, 0, 0.670588 ), Color( 1, 1, 1, 0.505882 ), Color( 1, 0, 0, 0.341176 ), Color( 1, 1, 1, 0.176471 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_animacao_derrota_vitoria"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Monstro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0.835294 ), Color( 1, 0, 0, 0.670588 ), Color( 1, 1, 1, 0.505882 ), Color( 1, 0, 0, 0.341176 ), Color( 1, 1, 1, 0.176471 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_animacao_derrota_vitoria"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelPersonagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -230, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelMonstro:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 410, 10 ), Vector2( 650, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Acoes:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 10 ), Vector2( 240, -170 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "mostrou_tela_derrota_vitoria"
} ]
}

[sub_resource type="Animation" id=18]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Dado:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dado:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "resolve_resultado_fugir"
} ]
}

[node name="PainelLuta" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPersonagem" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 350.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelPersonagem"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 330.0
rect_min_size = Vector2( 200, 310 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nome" type="Label" parent="PanelPersonagem/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Nome"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelPersonagem/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 32.0
custom_styles/separator = SubResource( 3 )

[node name="BoxNivel" type="HBoxContainer" parent="PanelPersonagem/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 60.0

[node name="DescNivel" type="Label" parent="PanelPersonagem/VBoxContainer/BoxNivel"]
margin_right = 44.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Nivel: "
align = 1

[node name="Nivel" type="Label" parent="PanelPersonagem/VBoxContainer/BoxNivel"]
margin_left = 48.0
margin_right = 57.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="BoxEquip" type="HBoxContainer" parent="PanelPersonagem/VBoxContainer"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 88.0

[node name="DescEquip" type="Label" parent="PanelPersonagem/VBoxContainer/BoxEquip"]
margin_right = 53.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Equip.: "
align = 1

[node name="Equip" type="Label" parent="PanelPersonagem/VBoxContainer/BoxEquip"]
margin_left = 57.0
margin_right = 66.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="BoxStatus" type="HBoxContainer" parent="PanelPersonagem/VBoxContainer"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 116.0

[node name="DescStatus" type="Label" parent="PanelPersonagem/VBoxContainer/BoxStatus"]
margin_right = 59.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Status: "
align = 1

[node name="Status" type="Label" parent="PanelPersonagem/VBoxContainer/BoxStatus"]
margin_left = 63.0
margin_right = 72.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="PanelPersonagem/VBoxContainer"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 124.0
custom_styles/separator = SubResource( 3 )

[node name="BoxForca" type="HBoxContainer" parent="PanelPersonagem/VBoxContainer"]
margin_top = 128.0
margin_right = 200.0
margin_bottom = 152.0

[node name="DescForca" type="Label" parent="PanelPersonagem/VBoxContainer/BoxForca"]
margin_right = 52.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Força: "
align = 1

[node name="Forca" type="Label" parent="PanelPersonagem/VBoxContainer/BoxForca"]
margin_left = 56.0
margin_right = 65.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="HSeparator3" type="HSeparator" parent="PanelPersonagem/VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 160.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescStatus" type="Label" parent="PanelPersonagem/VBoxContainer"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "Status:"
align = 1

[node name="ListaStatus" type="ItemList" parent="PanelPersonagem/VBoxContainer"]
margin_top = 192.0
margin_right = 200.0
margin_bottom = 317.0
rect_min_size = Vector2( 200, 125 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 5 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMonstro" type="Panel" parent="."]
margin_left = 410.0
margin_top = 10.0
margin_right = 630.001
margin_bottom = 350.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelMonstro"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 330.0
rect_min_size = Vector2( 200, 310 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nome" type="Label" parent="PanelMonstro/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Nome"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelMonstro/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 32.0
custom_styles/separator = SubResource( 3 )

[node name="BoxForca" type="HBoxContainer" parent="PanelMonstro/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 60.0

[node name="DescForca" type="Label" parent="PanelMonstro/VBoxContainer/BoxForca"]
margin_right = 52.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Força: "
align = 1

[node name="Forca" type="Label" parent="PanelMonstro/VBoxContainer/BoxForca"]
margin_left = 56.0
margin_right = 65.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="PanelMonstro/VBoxContainer"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 68.0
custom_styles/separator = SubResource( 3 )

[node name="TituloDesc" type="Label" parent="PanelMonstro/VBoxContainer"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "Descricao: "
align = 1

[node name="Desc" type="RichTextLabel" parent="PanelMonstro/VBoxContainer"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 220 )
custom_fonts/normal_font = SubResource( 9 )

[node name="Acoes" type="Panel" parent="."]
margin_left = 240.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 170.0
rect_min_size = Vector2( 160, 160 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Acoes"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 140, 140 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Acoes/VBoxContainer"]
margin_right = 140.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Ações"
align = 1

[node name="HSeparator" type="HSeparator" parent="Acoes/VBoxContainer"]
margin_top = 28.0
margin_right = 140.0
margin_bottom = 32.0
custom_styles/separator = SubResource( 3 )

[node name="Fugir" type="Button" parent="Acoes/VBoxContainer"]
margin_top = 36.0
margin_right = 140.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Tentar Fugir"

[node name="UsarItem" type="Button" parent="Acoes/VBoxContainer"]
margin_top = 70.0
margin_right = 140.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Usar Item"

[node name="Resolver" type="Button" parent="Acoes/VBoxContainer"]
margin_top = 104.0
margin_right = 140.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Resolver"

[node name="Fugir" type="Panel" parent="."]
margin_left = 240.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 170.0
rect_min_size = Vector2( 160, 160 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxFugir" type="VBoxContainer" parent="Fugir"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 140, 140 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Fugir/BoxFugir"]
margin_right = 140.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Fugir"
align = 1

[node name="HSeparator" type="HSeparator" parent="Fugir/BoxFugir"]
margin_top = 28.0
margin_right = 140.0
margin_bottom = 32.0
custom_styles/separator = SubResource( 3 )

[node name="Desc" type="Label" parent="Fugir/BoxFugir"]
margin_top = 36.0
margin_right = 140.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 2 )
text = "Role o Dado e fuja tirando 5 ou mais."
align = 1
autowrap = true

[node name="Rolar" type="Button" parent="Fugir/BoxFugir"]
margin_top = 100.0
margin_right = 140.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Rolar"

[node name="PainelVitoria" type="Panel" parent="."]
margin_left = 190.0
margin_top = 30.0
margin_right = 440.0
margin_bottom = 230.0
rect_min_size = Vector2( 250, 200 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxFugir" type="VBoxContainer" parent="PainelVitoria"]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 190.0
rect_min_size = Vector2( 230, 180 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="PainelVitoria/BoxFugir"]
margin_top = 2.0
margin_right = 230.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Vitória!"
align = 1

[node name="HSeparator" type="HSeparator" parent="PainelVitoria/BoxFugir"]
margin_top = 30.0
margin_right = 230.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="PainelVitoria/BoxFugir"]
margin_top = 38.0
margin_right = 230.0
margin_bottom = 62.0
alignment = 1

[node name="ExpIni" type="Label" parent="PainelVitoria/BoxFugir/HBoxContainer"]
margin_left = 3.0
margin_right = 36.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PainelVitoria/BoxFugir/HBoxContainer"]
margin_left = 40.0
margin_right = 190.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 24 )
custom_fonts/font = SubResource( 10 )
step = 1.0
value = 20.0
percent_visible = false

[node name="ExpFin" type="Label" parent="PainelVitoria/BoxFugir/HBoxContainer"]
margin_left = 194.0
margin_right = 227.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 1

[node name="MensagensVitoria" type="ItemList" parent="PainelVitoria/BoxFugir"]
margin_top = 66.0
margin_right = 230.0
margin_bottom = 136.0
rect_min_size = Vector2( 230, 70 )
custom_styles/selected_focus = SubResource( 4 )
custom_styles/bg_focus = SubResource( 5 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="PainelVitoria/BoxFugir"]
margin_top = 140.0
margin_right = 230.0
margin_bottom = 144.0
custom_styles/separator = SubResource( 3 )

[node name="Continuar" type="Button" parent="PainelVitoria/BoxFugir"]
margin_top = 148.0
margin_right = 230.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"

[node name="PainelDerrota" type="Panel" parent="."]
margin_left = 190.0
margin_top = 30.0
margin_right = 440.0
margin_bottom = 230.0
rect_min_size = Vector2( 250, 200 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxFugir" type="VBoxContainer" parent="PainelDerrota"]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 190.0
rect_min_size = Vector2( 230, 180 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="PainelDerrota/BoxFugir"]
margin_top = 1.0
margin_right = 230.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Derrota!"
align = 1

[node name="HSeparator" type="HSeparator" parent="PainelDerrota/BoxFugir"]
margin_top = 29.0
margin_right = 230.0
margin_bottom = 33.0
custom_styles/separator = SubResource( 3 )

[node name="CoisaRuim" type="RichTextLabel" parent="PainelDerrota/BoxFugir"]
margin_top = 37.0
margin_right = 230.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/normal_font = SubResource( 11 )

[node name="HSeparator3" type="HSeparator" parent="PainelDerrota/BoxFugir"]
margin_top = 141.0
margin_right = 230.0
margin_bottom = 145.0
custom_styles/separator = SubResource( 3 )

[node name="Continuar" type="Button" parent="PainelDerrota/BoxFugir"]
margin_top = 149.0
margin_right = 230.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"

[node name="Personagem" parent="." instance=ExtResource( 2 )]
position = Vector2( 265, 294 )

[node name="Monstro" type="Sprite" parent="."]
position = Vector2( 373, 294 )
texture = ExtResource( 4 )

[node name="AnimacaoIniciar" type="AnimationPlayer" parent="."]
anims/AnimacaoEspadas = SubResource( 12 )
anims/Fugiu = SubResource( 13 )
anims/Iniciar = SubResource( 14 )
anims/JogadorDerrota = SubResource( 15 )
anims/MonstroDerrota = SubResource( 16 )
anims/MostraPainelDerrotaVitoria = SubResource( 17 )
anims/RolouDado = SubResource( 18 )

[node name="Dado" type="Sprite" parent="."]
visible = false
position = Vector2( 319, 101 )
texture = ExtResource( 5 )
vframes = 6
hframes = 6
frame = 31

[node name="TimerDado" type="Timer" parent="."]
wait_time = 0.3

[node name="Espadas" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.0520026 )
position = Vector2( 320, 400 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 3
hframes = 2
frame = 1
[connection signal="button_down" from="Acoes/VBoxContainer/Fugir" to="." method="_on_Fugir_button_down"]
[connection signal="button_down" from="Acoes/VBoxContainer/Resolver" to="." method="_on_Resolver_button_down"]
[connection signal="button_down" from="Fugir/BoxFugir/Rolar" to="." method="_on_Rolar_button_down"]
[connection signal="button_down" from="PainelVitoria/BoxFugir/Continuar" to="." method="_on_Continuar_vitoria_button_down"]
[connection signal="button_down" from="PainelDerrota/BoxFugir/Continuar" to="." method="_on_Continuar_derrota_button_down"]
[connection signal="timeout" from="TimerDado" to="." method="_on_TimerDado_timeout"]
